--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.3",
     "mdb-ui-kit": "^6.2.0",
     "mdbootstrap": "^4.20.0",
     "netlify": "^13.1.2",
-    "php": "^1.0.2"
+    "nodejs": "^0.0.0",
+    "php": "^1.0.2",
+    "requirejs": "^2.3.6"
   }
 }
